--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
   <% if @favourite_movies.present? %>
     <h3>Favourite Movies</h3>
       <% @favourite_movies.each do |movie|%>
-        <%= link_to image_tag(movie.image_file_name), movie %>  
+        <%= link_to main_image(movie), movie %>  
       <%end%>
   <%end%>
 
