changed duration to text field in form

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.text_field :director%>
 
     <%= f.label :duration %>
-    <%= f.number_field :duration%>
+    <%= f.text_field :duration%>
 
     <%= f.label :main_image %>
     <%= f.file_field :main_image%>
